[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-clock-cli"
version = "0.1.0"
description = "Clean architecture alarm clock CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
alarm = "alarm_clock.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
